fix: testes unitarios